# starlink

./: .gitmodules  Makefile.dependencies  componentset.xml
applications/gaia/gaia3d/: configure
libext/: configure.ac
libraries/: configure.ac
libraries/aryk/: ARYK_PAR  Makefile.am  ary_test.f  aryk.h  aryk1.h  aryk1Accok.c  aryk1Anl.c  aryk1Annpl.c  aryk1Antmp.c  aryk1Bad.c  aryk1Badx.cgen  aryk1Bpp.c  aryk1Bppx.cgen  aryk1Ccpy.c  aryk1Chacc.c  aryk1Chbpp.c  aryk1Chcma.c  aryk1Chmod.c  aryk1Chscn.c  aryk1Cln.c  aryk1Cmtmp.c  aryk1Cpdlt.c  aryk1Cpscl.c  aryk1Cpy.c  aryk1Cpync.c  aryk1Crnba.c  aryk1Cut.c  aryk1Cvfx.cgen  aryk1Cvtx.cgen  aryk1DCBLock.c  aryk1Danl.c  aryk1Dbad.c  aryk1Dbnd.c  aryk1Dcpy.c  aryk1Dcre.c  aryk1Dcrep.c  aryk1Defr.c  aryk1Del.c  aryk1Dfppl.c  aryk1Dfrm.c  (+132 more)
libraries/hds/: hds.h
libraries/hds-v4/: .gitignore  Makefile.am  component.xml  component.xml.in  configure.ac  dat1.h  hds.h  hds_v4.h
